objects/Release_Incubator_Approvers__c.object
<CustomObject>
    <description>Release Incubator Approvers</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Incubator_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Incubator Approvers</relationshipLabel>
        <relationshipName>Release_Incubator_Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;ACTIVE&quot;</defaultValue>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Release Incubator Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>GUID__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>John_brennan</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver__c</field>
            <operation>equals</operation>
            <value>John brennan</value>
        </filters>
        <label>John brennan</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Incubator Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>